--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   ios-build:
     name: iOS Build
-    instance_type: mac_mini
+    instance_type: mac_pro
     max_build_duration: 20
     environment:
       flutter: stable
